# Projects

./: .env  compose.yaml  pyproject.toml
data/chroma/8497efe6-b832-4e36-a953-31b7942d5a04/: index_metadata.pickle
data/sample-documents/: docs_part1.md  docs_part1.txt  docs_part2.md  docs_part2.txt  docs_part3.md  docs_part3.txt
docs/: README.md  technical-approach.md
scripts/: engineer-data.py  ingest_to_db.py  rag_query_server.py  ui_server.py
scripts/.gradio/flagged/: dataset1.csv  dataset2.csv
tests/: International-Space-Station.csv  sample-queries.json
workflows/: rag-chatbot-workflow.json
