[project]
name = "rag-chatbot-project"
version = "0.1.0"
description = "FAQ Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "fastapi>=0.115.9",
    "fpdf>=1.7.2",
    "gradio>=5.33.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-ollama>=0.3.3",
    "markdown>=3.8",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "plotly>=6.1.2",
    "pymongo>=4.13.0",
    "pypdf>=5.6.0",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.3",
]
